tests/should_fail/deep_chunk.nds
-- Deeply nested chunk access in expression.
set y to item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of x
